cabal-version:       2.4

name:                Lambda-Calculus
synopsis:            A tool for generating untyped lambda calculus
description:         Iocularia is an untyped language that allows for mutual
                     recursion, and can be converted to De Brujin leveled
                     lambda calculus and be reduced by this tool.
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              TrueBoxGuy
maintainer:          gamer.tmt@gmail.com
category:            Math
extra-source-files:  CHANGELOG.md, README.md
data-dir:            data

executable Lambda-Calculus
  main-is:             Main.hs
  other-modules:       Lambda.Lambda, Lambda.Combinators, Lambda.Parser, Parsers
                       Transpiler.Conversion, Transpiler.Parser, Transpiler.Scope
  build-depends:       base ^>=4.12.0.0, megaparsec ^>= 7.0.5, mtl ^>= 2.2.2, parser-combinators ^>= 1.0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
